# passbuddy

./: .gitignore  AGENTS.md  Cargo.toml  README.md
kicad/: #auto_saved_files#  _autosave-passbuddy.kicad_prl  _autosave-passbuddy.kicad_pro  _autosave-passbuddy.kicad_sch  fabrication-toolkit-options.json  fp-info-cache  passbuddy.kicad_pcb  passbuddy.kicad_prl  passbuddy.kicad_pro
kicad/jlcpcb/: project.db
kicad/production/: Passbuddy_v0_bom.csv  Passbuddy_v0_designators.csv  Passbuddy_v0_positions.csv  netlist.ipc
src/: display.rs  dma_helpers.rs  encryption.rs  input.rs  keepass.rs  lib.rs  usb_hid_queue.rs
src/app/: mod.rs  terminal.rs
src/app/screens/: action_completed.rs  boot_splash.rs  entry_options.rs  mod.rs  new_entry_form.rs  new_group_form.rs  pin_entry.rs  select_database.rs  select_entry.rs  select_group.rs  text_entry_form.rs  view_password.rs
src/display/: mod.rs  ssd1309.rs
src/keepass/: README.md  db.rs  entry.rs  error.rs  group.rs  header.rs  mod.rs  times.rs
src/storage/: header.rs  keepass.rs  layout.rs  mod.rs  region.rs
