[package]
edition      = "2024"
name         = "passbuddy"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "passbuddy"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

### Encryption deps
nb = "1.1.0"

### Ratatui deps
embedded-hal-bus = { version = "0.3" }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "cc9f8fe372f09342537bc31a1355f77f2693d70b", default-features = false, features = [
    "fonts",
] }
ratatui = { version = "0.30.0-alpha.5", default-features = false, features = ["portable-atomic"] }
heapless = { version = "0.9.2", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
